[package]
name = "lddcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lddtree = "0.3.4"
elf = "0.7.4"
serde_json = "1.0.113"
clap = { version = "4.4.18", features = ["derive"] }
strum = { version = "0.26",  features = ["derive"] }
strum_macros = "0.26"
